--- a/11.html
+++ b/11.html
@@ -6,16 +6,16 @@
 			overflow: auto;
 			height: 100%;
 			width: 100%;
-			background: #666666;
+			background: #7A8E5D;
 		}
 		#ball {
 			position: absolute;
 			left: 0;
 			top: 0;
-			border-radius: 10px;
-			width: 20px;
-			height: 20px;
-			background-color: black;
+			border-radius: 25px;
+			width: 50px;
+			height: 50px;
+			background-color: #1F4F9B;
 		}
 	</style>
 </head>
